--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
             background-color: white;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
+        .category a {
+            color: #333;
+            text-decoration: none;
+            font-weight: bold;
+            display: block;
+            padding: 10px;
+        }
+        .category a:hover {
+            background-color: #eee;
+        }
     </style>
 </head>
 <body>
@@ -51,27 +61,27 @@
         <p>Entdecken Sie die besten Open Source Intelligence Tools</p>
     </header>
     <nav>
-        <a href="#social-media">Social Media</a>
-        <a href="#forensics">Forensik</a>
-        <a href="#data-breach">Datenlecks</a>
-        <a href="#geo">Geolocation</a>
+        <a href="social-media.tools.html">Social Media</a>
+        <a href="forensics.tools.html">Forensik</a>
+        <a href="data-breach.tools.html">Datenlecks</a>
+        <a href="geolocation.tools.html">Geolocation</a>
     </nav>
     <div class="container">
-        <div class="category" id="social-media">
-            <h2>Social Media Tools</h2>
-            <p>Beschreibung und Link zu spezifischen Social Media OSINT Tools.</p>
+        <div class="category">
+            <h2><a href="social-media.tools.html">Social Media Tools</a></h2>
+            <p>Klicken Sie hier für spezifische Social Media OSINT Tools.</p>
         </div>
-        <div class="category" id="forensics">
-            <h2>Forensik Tools</h2>
-            <p>Beschreibung und Link zu spezifischen Forensik OSINT Tools.</p>
+        <div class="category">
+            <h2><a href="forensics.tools.html">Forensik Tools</a></h2>
+            <p>Klicken Sie hier für spezifische Forensik OSINT Tools.</p>
         </div>
-        <div class="category" id="data-breach">
-            <h2>Datenlecks Tools</h2>
-            <p>Beschreibung und Link zu spezifischen Tools für Datenlecks.</p>
+        <div class="category">
+            <h2><a href="data-breach.tools.html">Datenlecks Tools</a></h2>
+            <p>Klicken Sie hier für spezifische Tools für Datenlecks.</p>
         </div>
-        <div class="category" id="geo">
-            <h2>Geolocation Tools</h2>
-            <p>Beschreibung und Link zu spezifischen Geolocation OSINT Tools.</p>
+        <div class="category">
+            <h2><a href="geolocation.tools.html">Geolocation Tools</a></h2>
+            <p>Klicken Sie hier für spezifische Geolocation OSINT Tools.</p>
         </div>
     </div>
 </body>
