--- a/index.html
+++ b/index.html
@@ -18,21 +18,6 @@
             padding: 10px 20px;
             text-align: center;
         }
-        nav {
-            background: #555;
-            display: flex;
-            justify-content: center;
-            padding: 10px 0;
-        }
-        nav a {
-            color: white;
-            padding: 10px 15px;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        nav a:hover {
-            background-color: #777;
-        }
         .container {
             padding: 20px;
             text-align: center;
@@ -42,13 +27,15 @@
             padding: 20px;
             background-color: white;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            display: inline-block;
+            width: 200px;
+            vertical-align: top;
         }
         .category a {
             color: #333;
             text-decoration: none;
             font-weight: bold;
             display: block;
-            padding: 10px;
         }
         .category a:hover {
             background-color: #eee;
@@ -60,29 +47,22 @@
         <h1>OSINT Tool Directory</h1>
         <p>Entdecken Sie die besten Open Source Intelligence Tools</p>
     </header>
-    <nav>
-        <a href="social-media.tools.html">Social Media</a>
-        <a href="forensics.tools.html">Forensik</a>
-        <a href="data-breach.tools.html">Datenlecks</a>
-        <a href="geolocation.tools.html">Geolocation</a>
-    </nav>
     <div class="container">
-        <div class="category">
-            <h2><a href="social-media.tools.html">Social Media Tools</a></h2>
-            <p>Klicken Sie hier für spezifische Social Media OSINT Tools.</p>
-        </div>
-        <div class="category">
-            <h2><a href="forensics.tools.html">Forensik Tools</a></h2>
-            <p>Klicken Sie hier für spezifische Forensik OSINT Tools.</p>
-        </div>
-        <div class="category">
-            <h2><a href="data-breach.tools.html">Datenlecks Tools</a></h2>
-            <p>Klicken Sie hier für spezifische Tools für Datenlecks.</p>
-        </div>
-        <div class="category">
-            <h2><a href="geolocation.tools.html">Geolocation Tools</a></h2>
-            <p>Klicken Sie hier für spezifische Geolocation OSINT Tools.</p>
-        </div>
+        <div class="category"><a href="image-video.tools.html">📸 Image/Video</a></div>
+        <div class="category"><a href="safety.tools.html">⚠️ Stay Safe</a></div>
+        <div class="category"><a href="social-media.tools.html">🤳 Social Media</a></div>
+        <div class="category"><a href="archiving.tools.html">🗃️ Archiving</a></div>
+        <div class="category"><a href="people.tools.html">🧑‍🤝‍🧑 People</a></div>
+        <div class="category"><a href="dataviz.tools.html">📊 Data Visualization</a></div>
+        <div class="category"><a href="maps-satellites.tools.html">🗺️ Maps/Satellites</a></div>
+        <div class="category"><a href="guides.tools.html">❓ Guides</a></div>
+        <div class="category"><a href="transport.tools.html">✈️ Transport</a></div>
+        <div class="category"><a href="education.tools.html">📐 Education</a></div>
+        <div class="category"><a href="websites.tools.html">🌐 Websites</a></div>
+        <div class="category"><a href="misc.tools.html">Miscellaneous</a></div>
+        <div class="category"><a href="companies-finance.tools.html">💵 Companies & Finance</a></div>
+        <div class="category"><a href="environment-wildlife.tools.html">🌳🐯 Environment & Wildlife</a></div>
+        <div class="category"><a href="non-english.tools.html">🌍 Non-English</a></div>
     </div>
 </body>
 </html>
