--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OSINT Tool Directory</title>
+    <title>OSINT Tool Verzeichnis</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -44,25 +44,25 @@
 </head>
 <body>
     <header>
-        <h1>OSINT Tool Directory</h1>
+        <h1>OSINT Tool Verzeichnis</h1>
         <p>Entdecken Sie die besten Open Source Intelligence Tools</p>
     </header>
     <div class="container">
-        <div class="category"><a href="image-video.tools.html">📸 Image/Video</a></div>
-        <div class="category"><a href="safety.tools.html">⚠️ Stay Safe</a></div>
-        <div class="category"><a href="social-media.tools.html">🤳 Social Media</a></div>
-        <div class="category"><a href="archiving.tools.html">🗃️ Archiving</a></div>
-        <div class="category"><a href="people.tools.html">🧑‍🤝‍🧑 People</a></div>
-        <div class="category"><a href="dataviz.tools.html">📊 Data Visualization</a></div>
-        <div class="category"><a href="maps-satellites.tools.html">🗺️ Maps/Satellites</a></div>
-        <div class="category"><a href="guides.tools.html">❓ Guides</a></div>
+        <div class="category"><a href="image-video.tools.html">📸 Bild/Video</a></div>
+        <div class="category"><a href="safety.tools.html">⚠️ Sicherheit</a></div>
+        <div class="category"><a href="social-media.tools.html">🤳 Soziale Medien</a></div>
+        <div class="category"><a href="archiving.tools.html">🗃️ Archivierung</a></div>
+        <div class="category"><a href="people.tools.html">🧑‍🤝‍🧑 Personen</a></div>
+        <div class="category"><a href="dataviz.tools.html">📊 Datenvisualisierung</a></div>
+        <div class="category"><a href="maps-satellites.tools.html">🗺️ Karten/Satelliten</a></div>
+        <div class="category"><a href="guides.tools.html">❓ Anleitungen</a></div>
         <div class="category"><a href="transport.tools.html">✈️ Transport</a></div>
-        <div class="category"><a href="education.tools.html">📐 Education</a></div>
-        <div class="category"><a href="websites.tools.html">🌐 Websites</a></div>
-        <div class="category"><a href="misc.tools.html">Miscellaneous</a></div>
-        <div class="category"><a href="companies-finance.tools.html">💵 Companies & Finance</a></div>
-        <div class="category"><a href="environment-wildlife.tools.html">🌳🐯 Environment & Wildlife</a></div>
-        <div class="category"><a href="non-english.tools.html">🌍 Non-English</a></div>
+        <div class="category"><a href="education.tools.html">📐 Bildung</a></div>
+        <div class="category"><a href="websites.tools.html">🌐 Webseiten</a></div>
+        <div class="category"><a href="misc.tools.html">Verschiedenes</a></div>
+        <div class="category"><a href="companies-finance.tools.html">💵 Unternehmen & Finanzen</a></div>
+        <div class="category"><a href="environment-wildlife.tools.html">🌳🐯 Umwelt & Tiere</a></div>
+        <div class="category"><a href="non-english.tools.html">🌍 Nicht-Englisch</a></div>
     </div>
 </body>
 </html>
