--- a/index.html
+++ b/index.html
@@ -48,21 +48,52 @@
         <p>Entdecken Sie die besten Open Source Intelligence Tools</p>
     </header>
     <div class="container">
-        <div class="category"><a href="image-video.tools.html">📸 Bild/Video</a></div>
-        <div class="category"><a href="safety.tools.html">⚠️ Sicherheit</a></div>
-        <div class="category"><a href="social-media.tools.html">🤳 Soziale Medien</a></div>
-        <div class="category"><a href="archiving.tools.html">🗃️ Archivierung</a></div>
-        <div class="category"><a href="people.tools.html">🧑‍🤝‍🧑 Personen</a></div>
-        <div class="category"><a href="dataviz.tools.html">📊 Datenvisualisierung</a></div>
-        <div class="category"><a href="maps-satellites.tools.html">🗺️ Karten/Satelliten</a></div>
-        <div class="category"><a href="guides.tools.html">❓ Anleitungen</a></div>
-        <div class="category"><a href="transport.tools.html">✈️ Transport</a></div>
-        <div class="category"><a href="education.tools.html">📐 Bildung</a></div>
-        <div class="category"><a href="websites.tools.html">🌐 Webseiten</a></div>
-        <div class="category"><a href="misc.tools.html">Verschiedenes</a></div>
-        <div class="category"><a href="companies-finance.tools.html">💵 Unternehmen & Finanzen</a></div>
-        <div class="category"><a href="environment-wildlife.tools.html">🌳🐯 Umwelt & Tiere</a></div>
-        <div class="category"><a href="non-english.tools.html">🌍 Nicht-Englisch</a></div>
+        <div class="category"><a href="#">Allgemeine Suche</a></div>
+        <div class="category"><a href="#">Nationale Suchmaschinen</a></div>
+        <div class="category"><a href="#">Metasuche</a></div>
+        <div class="category"><a href="#">Spezialsuchmaschinen</a></div>
+        <div class="category"><a href="#">Visuelle Suche und Clustering Suchmaschinen</a></div>
+        <div class="category"><a href="#">Ähnliche Seiten Suche</a></div>
+        <div class="category"><a href="#">Dokumenten- und Präsentationssuche</a></div>
+        <div class="category"><a href="#">Dateisuche</a></div>
+        <div class="category"><a href="#">Pastebins</a></div>
+        <div class="category"><a href="#">Code-Suche</a></div>
+        <div class="category"><a href="#">Wichtige Soziale Netzwerke</a></div>
+        <div class="category"><a href="#">Echtzeit- und Soziale Medien Suche</a></div>
+        <div class="category"><a href="#">Blog-Suche</a></div>
+        <div class="category"><a href="#">Foren und Diskussionsplattformen Suche</a></div>
+        <div class="category"><a href="#">Benutzername Prüfung</a></div>
+        <div class="category"><a href="#">Personenrecherche</a></div>
+        <div class="category"><a href="#">E-Mail-Suche / -Prüfung</a></div>
+        <div class="category"><a href="#">Telefonnummernrecherche</a></div>
+        <div class="category"><a href="#">Expertensuche</a></div>
+        <div class="category"><a href="#">Unternehmensrecherche</a></div>
+        <div class="category"><a href="#">Job-Suchressourcen</a></div>
+        <div class="category"><a href="#">Q&A Seiten</a></div>
+        <div class="category"><a href="#">Domain- und IP-Forschung</a></div>
+        <div class="category"><a href="#">Schlüsselwortforschung</a></div>
+        <div class="category"><a href="#">Webhistorie und Website-Aufnahme</a></div>
+        <div class="category"><a href="#">Sprachwerkzeuge</a></div>
+        <div class="category"><a href="#">Bildersuche</a></div>
+        <div the="category"><a href="#">Bildanalyse</a></div>
+        <div the="category"><a href="#">Videosuche und weitere Video-Tools</a></div>
+        <div the="category"><a href="#">Akademische Ressourcen und Graue Literatur</a></div>
+        <div the="category"><a href="#">Georäumliche Forschung und Kartierungswerkzeuge</a></div>
+        <div the="category"><a href="#">Nachrichten</a></div>
+        <div the="category"><a href="#">Nachrichten Digest und Entdeckungswerkzeuge</a></div>
+        <div the="category"><a href="#">Faktenprüfung</a></div>
+        <div the="category"><a href="#">Daten und Statistiken</a></div>
+        <div the="category"><a href="#">Webmonitoring</a></div>
+        <div the="category"><a href="#">Browser</a></div>
+        <div the="category"><a href="#">Offline-Browsing</a></div>
+        <div the="category"><a href="#">VPN-Dienste</a></div>
+        <div the="category"><a href="#">Infografiken und Datenvisualisierung</a></div>
+        <div the="category"><a href="#">Analyse sozialer Netzwerke</a></div>
+        <div the="category"><a href="#">Datenschutz und Verschlüsselung</a></div>
+        <div the="category"><a href="#">DNS</a></div>
+        <div the="category"><a href="#">Maritim</a></div>
+        <div the="category"><a href="#">Andere Werkzeuge</a></div>
+        <div the="category"><a href="#">Threat Intelligence</a></div>
     </div>
 </body>
 </html>
