--- a/index.html
+++ b/index.html
@@ -20,16 +20,22 @@
         }
         .container {
             padding: 20px;
-            text-align: center;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
         }
         .category {
-            margin: 20px;
+            margin: 10px;
             padding: 20px;
             background-color: white;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            display: inline-block;
-            width: 200px;
-            vertical-align: top;
+            width: calc(25% - 20px); /* Adjusts the width accounting for margin */
+            box-sizing: border-box; /* Includes padding and border in the width */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            min-height: 100px;
         }
         .category a {
             color: #333;
